log
Thu 21 Mar 2024 08:23:49 PM UTC: 
 tests:  0|5
total_score: 0/70
8df703c
Thu 21 Mar 2024 08:34:17 PM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:10: error: ‘i’ undeclared (first use in this function)
   47 |     for (i = 0; i <= 10; i++){
      |          ^
exercises.c:47:10: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
f88bfe2
Thu 21 Mar 2024 08:34:25 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
7df23b4
Thu 21 Mar 2024 08:48:53 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
e208f59
Thu 21 Mar 2024 09:04:47 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:86:12: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   86 |       *num = popCurrent(L);
      |            ^
exercises.c:87:12: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   87 |       *num = next(L);
      |            ^
cc1: all warnings being treated as errors
Compilation failed
f67ea57
Thu 21 Mar 2024 09:12:05 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
013797d
Thu 21 Mar 2024 09:13:03 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  3|2
total_score: 40/70
f3786ff
Sat 23 Mar 2024 03:10:06 PM UTC: 
 exercises.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:114:17: error: implicit declaration of function ‘createStack’; did you mean ‘create_stack’? [-Werror=implicit-function-declaration]
  114 |   Stack* pila = createStack(cadena);
      |                 ^~~~~~~~~~~
      |                 create_stack
exercises.c:114:17: error: initialization of ‘Stack *’ {aka ‘List *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
exercises.c:117:62: error: expected expression before ‘==’ token
  117 |     if (cadena[i] == '(' || cadena[i] == '{' || cadena[i] || == '['){
      |                                                              ^~
exercises.c:118:24: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
  118 |       push(pila, cadena[i]);
      |                  ~~~~~~^~~
      |                        |
      |                        char
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘char’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
In file included from test.c:5:
exercises.c:122:9: error: implicit declaration of function ‘isEmpty’ [-Werror=implicit-function-declaration]
  122 |     if (isEmpty(pila)){
      |         ^~~~~~~
exercises.c:125:19: error: initialization of ‘char’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
  125 |     char ultimo = pop(pila);
      |                   ^~~
cc1: all warnings being treated as errors
Compilation failed
ec209e5
Sat 23 Mar 2024 03:10:46 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:117:62: error: expected expression before ‘==’ token
  117 |     if (cadena[i] == '(' || cadena[i] == '{' || cadena[i] || == '['){
      |                                                              ^~
exercises.c:118:24: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
  118 |       push(pila, cadena[i]);
      |                  ~~~~~~^~~
      |                        |
      |                        char
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘char’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
In file included from test.c:5:
exercises.c:122:9: error: implicit declaration of function ‘isEmpty’ [-Werror=implicit-function-declaration]
  122 |     if (isEmpty(pila)){
      |         ^~~~~~~
exercises.c:125:19: error: initialization of ‘char’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
  125 |     char ultimo = pop(pila);
      |                   ^~~
cc1: all warnings being treated as errors
Compilation failed
24fd43b
Sat 23 Mar 2024 03:11:02 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:118:24: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
  118 |       push(pila, cadena[i]);
      |                  ~~~~~~^~~
      |                        |
      |                        char
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘char’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
In file included from test.c:5:
exercises.c:122:9: error: implicit declaration of function ‘isEmpty’ [-Werror=implicit-function-declaration]
  122 |     if (isEmpty(pila)){
      |         ^~~~~~~
exercises.c:125:19: error: initialization of ‘char’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
  125 |     char ultimo = pop(pila);
      |                   ^~~
cc1: all warnings being treated as errors
Compilation failed
60d3e13
Sat 23 Mar 2024 03:12:28 PM UTC: 
 exercises.c | 14 ++++++--------
 1 file changed, 6 insertions(+), 8 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:114:17: error: implicit declaration of function ‘createStack’; did you mean ‘create_stack’? [-Werror=implicit-function-declaration]
  114 |   Stack* pila = createStack(strlen(cadena));
      |                 ^~~~~~~~~~~
      |                 create_stack
exercises.c:114:17: error: initialization of ‘Stack *’ {aka ‘List *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
exercises.c:118:32: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
  118 |               push(pila, cadena[i]);
      |                          ~~~~~~^~~
      |                                |
      |                                char
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘char’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
In file included from test.c:5:
exercises.c:120:19: error: implicit declaration of function ‘isEmpty’ [-Werror=implicit-function-declaration]
  120 |               if (isEmpty(pila)) {
      |                   ^~~~~~~
exercises.c:123:29: error: initialization of ‘char’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
  123 |               char ultimo = pop(pila);
      |                             ^~~
cc1: all warnings being treated as errors
Compilation failed
afd78a3
Sat 23 Mar 2024 03:12:47 PM UTC: 
 exercises.c | 22 ----------------------
 1 file changed, 22 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:114:1: error: control reaches end of non-void function [-Werror=return-type]
  114 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3716490
Sat 23 Mar 2024 03:12:56 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|2
total_score: 40/70
47678f1
